// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon component > calls the click event when the icon is clicked 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon as disabled 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center disabled"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with a custom class 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center custom-class"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the provided name 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the provided name and label 1`] = `
<body>
  <div>
    <icon
      aria-label="Dark mode"
      class="flex flex-shrink-0 items-center justify-center"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the size when specified in class 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center small"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the size when specified in class 2`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center medium"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the size when specified in class 3`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center large"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the specified role 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the specified size 1`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center small"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the specified size 2`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center medium"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;

exports[`Icon component > renders the icon with the specified size 3`] = `
<body>
  <div>
    <icon
      aria-label="i-rokkit:mode-dark"
      class="flex flex-shrink-0 items-center justify-center large"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-rokkit:mode-dark"
      />
    </icon>
  </div>
</body>
`;
